--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio
+spring.datasource.url=jdbc:mysql://localhost:3306/miportfolio
 spring.datasource.username= root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# security
+jwt.secret = secret
+jwt.expiration = 36000
+
+server.error.include-message=always
+server.error.include-binding-errors=always
