--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/miportfolio
-spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://ur2lnxlgvsghlaym:npd6khwSkTf5ca6X28p3@btrzg1jciidzgwuobgyu-mysql.services.clever-cloud.com:3306/btrzg1jciidzgwuobgyu
+spring.datasource.username= ur2lnxlgvsghlaym
+spring.datasource.password=npd6khwSkTf5ca6X28p3
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
